# docio

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  check_experience.py  check_experience.py.bak  justfile  pyproject.toml  todo.md
.github/workflows/: ci.yml
docs/: ide-integration.md
docs/check_experience/: calculate_sum.md  optimized_dijkstra_pathfinding.md
docs/src/docio/core/: docio.md  get_doc.md  show_doc.md  validate_docs.md
examples/: demo.py
src/docio/: __init__.py  cli.py  core.py  exceptions.py
src/docio/stubs/: __init__.md  class.md  function.md  method.md  module.md  test.md
tests/: __init__.py  conftest.py
tests/unit/: test_cli.py  test_core.py  test_core_extended.py  test_docio_coverage.py
